err/netperf-wrapper.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/netperf_wrapper'...
Listing './lib/python3.5/site-packages/netperf_wrapper-0.9.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/applications'...
Listing './share/doc'...
Listing './share/doc/netperf-wrapper'...
Listing './share/doc/netperf-wrapper/misc'...
Compiling './share/doc/netperf-wrapper/misc/ditg-control-server.py'...
Compiling './share/doc/netperf-wrapper/misc/iperf-server.py'...
***   File "./share/doc/netperf-wrapper/misc/iperf-server.py", line 133
    print json.dumps(monitor.get_records(request_id))
             ^
SyntaxError: invalid syntax

Compiling './share/doc/netperf-wrapper/misc/tcpdump-wrapper.py'...
Compiling './share/doc/netperf-wrapper/misc/testcontrol-web-service.py'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/mime'...
Listing './share/mime/packages'...
Listing './share/netperf-wrapper'...
Listing './share/netperf-wrapper/tests'...
Listing './share/netperf-wrapper/ui'...
Listing './share/python-wheels'...
